@@ -1,3 +1,7 @@
+* Jan 17 2001 hship
+
+Tiny efficiency improvement in Enum serialization.
+
 * Jan 16 2001 hship
 
 Rename IResponseWriter.beginOrphan() to beginEmpty().
